Add header content

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8">
   <title>Sun Mihall</title>
 
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400|Montserrat:300,400" rel="stylesheet">
+
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
 
@@ -59,6 +62,14 @@
 
 
   <header class="header">
+
+    <div class="header__content">
+      <h1 class="heading-primary u-margin-bottom-large">
+        <span class="heading-primary--main">Sun Mihall</span>
+        <span class="heading-primary--sub">Language Services</span>
+      </h1>
+      <a href="#" class="waves-effect waves-light btn-large">CTA Button</a>
+    </div>
 
   </header>
 
