Setup build process

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="css/style.css">
 
 </head>
 
@@ -71,6 +71,7 @@
 
     <div class="header__content">
       <h1 class="heading-primary u-margin-bottom-large">
+        <span class="heading-primary--sub left-align">Welcome to</span>
         <span class="heading-primary--main">Sun Mihall</span>
         <span class="heading-primary--sub">Language Services</span>
       </h1>
@@ -102,12 +103,12 @@
           <h2 class="heading-secondary u-margin-bottom-large center-align">
             Current Campaign!
           </h2>
-          <p class="paragraph">
+          <p class="paragraph flow-text">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
             et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
             nisi ut aliquip ex ea commodo consequat.
           </p>
-          <p class="paragraph">
+          <p class="paragraph flow-text">
             Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
             Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
             anim id est laborum.
@@ -124,7 +125,10 @@
         <h2 class="heading-secondary center-align u-margin-bottom-large">
           Student voices
         </h2>
-        <div class="carousel carousel-slider center">
+
+
+
+        <!-- <div class="carousel carousel-slider center">
           <div class="carousel-fixed-item center">
             <a class="btn waves-effect red grey-text darken-text-2">button</a>
           </div>
@@ -152,24 +156,48 @@
               et neque porro odit quam veniam ut, dolor, nisi dolorem, non ab libero itaque rerum, numquam
               repellendus nulla!</p>
           </div>
+        </div> -->
+
+
+
+
+        <div class="carousel carousel-slider center">
+          <div class="carousel-fixed-item center">
+            <a class="btn waves-effect white grey-text darken-text-2">button</a>
+          </div>
+          <div class="carousel-item red white-text" href="#one!">
+            <h2>First Panel</h2>
+            <p class="white-text">This is your first panel</p>
+          </div>
+          <div class="carousel-item amber white-text" href="#two!">
+            <h2>Second Panel</h2>
+            <p class="white-text">This is your second panel</p>
+          </div>
+          <div class="carousel-item green white-text" href="#three!">
+            <h2>Third Panel</h2>
+            <p class="white-text">This is your third panel</p>
+          </div>
+          <div class="carousel-item blue white-text" href="#four!">
+            <h2>Fourth Panel</h2>
+            <p class="white-text">This is your fourth panel</p>
+          </div>
         </div>
+
+
+
+
       </div>
     </section>
 
     <section class="contact-section">
       <div class="row">
-        <div class="col m12 l7 contact-section__map">
+        <div class="col m12 l6 contact-section__map">
           <img class="map-img" src="assets/img/map.png" alt="Location map">
         </div>
-        <div class="col m12 l5 contact-section__contact">
+        <div class="col m12 l6 contact-section__contact">
           <h2 class="heading-secondary center-align u-margin-bottom-large">
             Get in touch with us
           </h2>
-
-
-
-
-
 
 
           <div class="row">
@@ -209,6 +237,67 @@
           </div>
 
 
+        </div>
+      </div>
+    </section>
+
+    <section class="contact-section2">
+      <div class="row">
+        <div class="col m12 l6">
+
+        </div>
+        <div class="col m12 l6 contact-section__contact">
+
+
+          <div class="card-panel white">
+
+            <h2 class="heading-secondary center-align u-margin-bottom-large">
+              Get in touch with us
+            </h2>
+
+
+            <div class="row">
+              <form class="col s12">
+                <div class="row">
+                  <div class="input-field col s12 m6 u-margin-bottom-small">
+                    <input id="first_name" type="text" class="validate">
+                    <label for="first_name">First Name</label>
+                  </div>
+                  <div class="input-field col s12 m6 u-margin-bottom-small">
+                    <input id="last_name" type="text" class="validate">
+                    <label for="last_name">Last Name</label>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="input-field col s12 u-margin-bottom-small">
+                    <input id="email" type="email" class="validate">
+                    <label for="email">Email</label>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="input-field col s12 u-margin-bottom-small">
+                    <input id="number" type="text" class="validate">
+                    <label for="number">Phone Number</label>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="input-field col s12 u-margin-bottom-small">
+                    <textarea id="textarea1" class="materialize-textarea"></textarea>
+                    <label for="textarea1">Message</label>
+                  </div>
+                </div>
+                <button class="btn waves-effect waves-light btn-submit" type="submit" name="action">Submit
+                  <i class="material-icons right">send</i>
+                </button>
+              </form>
+            </div>
+          </div>
+
+
+
+
+
+
 
 
 
@@ -216,6 +305,7 @@
         </div>
       </div>
     </section>
+
   </main>
 
 
@@ -231,13 +321,14 @@
     M.AutoInit();
 
     document.addEventListener('DOMContentLoaded', function() {
+      // Sidenav
       var elems = document.querySelectorAll('.sidenav');
       var instances = M.Sidenav.init(elems, options);
-    });
-
-    var instance = M.Carousel.init({
-      fullWidth: true,
-      indicators: true
+      // Carousel
+      var instance = M.Carousel.init({
+        fullWidth: true,
+        indicators: true
+      });
     });
   </script>
 
