Add testimonials and campaign

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
   <!-- CSS Files -->
   <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="assets/css/style.concat.css">
+  <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
+  <link rel="stylesheet" href="assets/css/main.css">
 
 </head>
 
@@ -236,7 +237,181 @@
           </div>
         </div>
       </div>
+    </div>
+    <!-- container -->
 
+
+
+    <hr>
+
+
+
+
+    <div class="container">
+      <div class="cd-section text-center" id="projects">
+        <div class="projects-4" id="projects-4">
+          <div class="row">
+            <div class="col-md-8 col-md-offset-2 text-center">
+              <h2 class="title">Current Campaign</h2>
+              <h5 class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia consequatur deserunt ut
+                quo nesciunt iste doloremque officia recusandae corporis sequi placeat officiis temporibus,
+                quasi, distinctio. Asperiores voluptates sit, autem! Laboriosam.</h5>
+              <div class="section-space"></div>
+            </div>
+          </div>
+
+          <div class="row">
+
+            <div class="col-md-5 col-md-offset-1">
+              <div class="card card-background" style="background-image: url('assets/img/examples/card-project2.jpg')">
+                <a href="#pablo">
+
+                </a>
+                <div class="card-content">
+                  <!-- <label class="label label-rose">Client: Apple</label>
+              <a href="#pablo">
+                <h3 class="card-title">Beautiful Project</h3>
+              </a>
+              <p class="card-description">
+                Don't be scared of the truth because we need to restart the human foundation in truth.
+              </p> -->
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-5">
+              <div class="info info-horizontal">
+                <div class="icon icon-info">
+                  <i class="material-icons">stars</i>
+                </div>
+                <div class="description">
+                  <h4 class="info-title">Feature 1</h4>
+                  <p class="description">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  </p>
+                </div>
+              </div>
+
+              <div class="info info-horizontal">
+                <div class="icon icon-primary">
+                  <i class="material-icons">stars</i>
+                </div>
+                <div class="description">
+                  <h4 class="info-title">Feature 2</h4>
+                  <p class="description">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas iure similique modi sapiente debitis
+                    doloremque in officia odio voluptates est fuga.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+    <div class="cd-section" id="testimonials">
+
+
+      <!--     *********    TESTIMONIALS 2     *********      -->
+
+      <div class="testimonials-2 section-blue">
+
+        <div class="container">
+
+          <div class="row">
+
+            <div id="carousel-testimonial" class="carousel slide" data-ride="carousel">
+
+              <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                  <div class="card card-testimonial card-plain">
+                    <h3 class="card-title">Yuki T.</h3>
+                    <h6 class="category text-muted">CEO @ Marketing Digital Ltd.</h6>
+
+                    <div class="card-content">
+                      <h5 class="card-description">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium eligendi
+                        quia ab sint fugiat, inventore, at aperiam modi reprehenderit quis enim, deleniti
+                        fugit nulla quos possimus totam blanditiis saepe. <br>Lorem ipsum dolor sit amet,
+                        consectetur adipisicing elit. Consectetur officia incidunt ab tempora accusamus
+                        laudantium fugit est libero quod animi facere quo laboriosam nihil maiores obcaecati
+                        fuga, totam, consequuntur aliquam!"
+                      </h5>
+
+                      <div class="footer">
+                        <i class="material-icons text-warning">star</i>
+                        <i class="material-icons text-warning">star</i>
+                        <i class="material-icons text-warning">star</i>
+                        <i class="material-icons text-warning">star</i>
+                        <i class="material-icons text-warning">star</i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="card card-testimonial card-plain">
+                    <h3 class="card-title">Hiro S.</h3>
+                    <h6 class="category text-muted">Designer @ Louboutin & Co.</h6>
+
+                    <div class="card-content">
+                      <h5 class="card-description">"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                        nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+                        qui officia deserunt mollit anim id est laborum."
+                      </h5>
+
+                      <div class="footer">
+                        <i class="material-icons text-warning">star</i>
+                        <i class="material-icons text-warning">star</i>
+                        <i class="material-icons text-warning">star</i>
+                        <i class="material-icons text-warning">star</i>
+                        <i class="material-icons text-warning">star</i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <a class="left carousel-control" href="#carousel-testimonial" role="button" data-slide="prev">
+                <i class="material-icons" aria-hidden="true">chevron_left</i>
+              </a>
+              <a class="right carousel-control" href="#carousel-testimonial" role="button" data-slide="next">
+                <i class="material-icons" aria-hidden="true">chevron_right</i>
+              </a>
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+
+      <!--     *********    END TESTIMONIALS 2      *********      -->
+
+    </div>
+
+
+
+
+
+
+
+
+
+    <div class="container">
       <div class="section text-center">
         <h2 class="title">Here is our team</h2>
 
@@ -253,24 +428,15 @@
                 </div>
                 <div class="col-md-7">
                   <div class="card-content">
-                    <h4 class="card-title">Alec Thompson</h4>
+                    <h4 class="card-title">Mike Fenstermaker</h4>
                     <h6 class="category text-muted">Founder</h6>
 
                     <p class="card-description">
-                      Don't be scared of the truth because we need to restart the human foundation in truth...
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et inventore vitae veritatis!
                     </p>
-
-                    <div class="footer">
-                      <a href="#pablo" class="btn btn-just-icon btn-simple btn-twitter">
-                        <i class="fa fa-twitter"></i>
-                      </a>
-                      <a href="#pablo" class="btn btn-just-icon btn-simple btn-facebook">
-                        <i class="fa fa-facebook-square"></i>
-                      </a>
-                      <a href="#pablo" class="btn btn-just-icon btn-simple btn-google">
-                        <i class="fa fa-google"></i>
-                      </a>
-                    </div>
+                    <p class="card-description">
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et inventore vitae veritatis!
+                    </p>
                   </div>
                 </div>
               </div>
@@ -287,14 +453,17 @@
                 </div>
                 <div class="col-md-7">
                   <div class="card-content">
-                    <h4 class="card-title">Kendall Andrew</h4>
-                    <h6 class="category text-muted">Graphic Designer</h6>
+                    <h4 class="card-title">Akemi</h4>
+                    <h6 class="category text-muted">School Manager</h6>
 
                     <p class="card-description">
-                      Don't be scared of the truth because we need to restart the human foundation in truth...
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et inventore vitae veritatis!
+                    </p>
+                    <p class="card-description">
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et inventore vitae veritatis!
                     </p>
 
-                    <div class="footer">
+                    <!-- <div class="footer">
                       <a href="#pablo" class="btn btn-just-icon btn-simple btn-linkedin">
                         <i class="fa fa-linkedin"></i>
                       </a>
@@ -307,7 +476,7 @@
                       <a href="#pablo" class="btn btn-just-icon btn-simple btn-google">
                         <i class="fa fa-google"></i>
                       </a>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
               </div>
@@ -324,24 +493,15 @@
                 </div>
                 <div class="col-md-7">
                   <div class="card-content">
-                    <h4 class="card-title">Gina Andrew</h4>
-                    <h6 class="category text-muted">Web Designer</h6>
+                    <h4 class="card-title">Matt</h4>
+                    <h6 class="category text-muted">Instructor</h6>
 
                     <p class="card-description">
-                      I love you like Kanye loves Kanye. Don't be scared of the truth.
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et inventore vitae veritatis!
                     </p>
-
-                    <div class="footer">
-                      <a href="#pablo" class="btn btn-just-icon btn-simple btn-youtube">
-                        <i class="fa fa-youtube-play"></i>
-                      </a>
-                      <a href="#pablo" class="btn btn-just-icon btn-simple btn-twitter">
-                        <i class="fa fa-twitter"></i>
-                      </a>
-                      <a href="#pablo" class="btn btn-just-icon btn-simple btn-instagram">
-                        <i class="fa fa-instagram"></i>
-                      </a>
-                    </div>
+                    <p class="card-description">
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et inventore vitae veritatis!
+                    </p>
                   </div>
                 </div>
               </div>
@@ -358,25 +518,15 @@
                 </div>
                 <div class="col-md-7">
                   <div class="card-content">
-                    <h4 class="card-title">George West</h4>
-                    <h6 class="category text-muted">Backend Hacker</h6>
+                    <h4 class="card-title">Ryan</h4>
+                    <h6 class="category text-muted">Instructor</h6>
 
                     <p class="card-description">
-                      I love you like Kanye loves Kanye. Don't be scared of the truth because we need to restart the human
-                      foundation.
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et inventore vitae veritatis!
                     </p>
-
-                    <div class="footer">
-                      <a href="#pablo" class="btn btn-just-icon btn-simple btn-linkedin">
-                        <i class="fa fa-linkedin"></i>
-                      </a>
-                      <a href="#pablo" class="btn btn-just-icon btn-simple btn-facebook">
-                        <i class="fa fa-facebook-square"></i>
-                      </a>
-                      <a href="#pablo" class="btn btn-just-icon btn-simple btn-google">
-                        <i class="fa fa-google"></i>
-                      </a>
-                    </div>
+                    <p class="card-description">
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et inventore vitae veritatis!
+                    </p>
                   </div>
                 </div>
               </div>
@@ -386,15 +536,17 @@
         </div>
 
       </div>
+    </div>
+    <!-- container -->
 
-
+    <div class="container">
       <div class="section section-contacts">
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
-            <h2 class="text-center title">Work with us</h2>
-            <h4 class="text-center description">Divide details about your product or agency work into parts. Write a few lines about each
-              one and contact us about any further collaboration. We will responde get back to you in
-              a couple of hours.</h4>
+            <h2 class="text-center title">Contact Us</h2>
+            <h4 class="text-center description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab ullam quo quaerat quam nostrum
+              sed necessitatibus, reprehenderit temporibus odio laboriosam saepe possimus ad deleniti
+              ducimus quis eos in exercitationem similique.</h4>
             <form class="contact-form">
               <div class="row">
                 <div class="col-md-6">
@@ -429,8 +581,10 @@
 
       </div>
     </div>
+    <!-- container -->
 
   </div>
+  <!-- main main-raised -->
 
   <footer class="footer">
     <div class="container">
